--- a/index.html
+++ b/index.html
@@ -12,13 +12,25 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="images/logo/logo_onglet_favicon-32x32.png" type="image/png">
 </head>
 
 <body>
+    <header class="header-nav">
+            <div class="booki-logo">
+                <a href="index.html">
+                <img src="/images/logo/Booki.png" alt="Logo booki" title="accueil">
+            </div>
+            </a>
+            <nav>
+                <a class="nav-link" href="#id-hebergements-and-populaires">Hébergements</a>
+                <a class="nav-link" href="#id-activites">Activités</a>
+            </nav>
+    </header>
     <div class="main-container">
-        <header></header>
+        
         <main>
-            <div class="hebergements-and-populaires">
+            <div id="hebergements-and-populaires">
                 <section class="hebergements">
 
                 </section>
