header ajusté, terminé

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <body>
     <header class="header-nav">
-            <div class="booki-logo">
+            <div>
                 <a href="index.html">
                 <img src="/images/logo/Booki.png" alt="Logo booki" title="accueil">
             </div>
             </a>
             <nav>
-                <a class="nav-link" href="#id-hebergements-and-populaires">Hébergements</a>
-                <a class="nav-link" href="#id-activites">Activités</a>
+                <a href="#id-hebergements-and-populaires">Hébergements</a>
+                <a href="#id-activites">Activités</a>
             </nav>
     </header>
     <div class="main-container">
@@ -104,5 +104,4 @@
         <footer></footer>
     </div>
 </body>
-
 </html>
