--- a/index.html
+++ b/index.html
@@ -28,8 +28,64 @@
             </nav>
     </header>
     <div class="main-container">
-        
         <main>
+
+            <section class="accomodation-search">
+                <div class="accomodation-search-title">
+                    <h2 class="section-title">Trouvez votre hébergement pour des vacances de rêve</h2>
+                    <p class="card-title">En plein centre-ville ou en pleine nature</p>
+                </div>
+                <div class="accomodation-search-bar">
+                    <div>
+                        <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
+                    </div>
+                    <form action="" method="post">
+                        <label for="ville"></label>
+                        <input type="search" id="ville" name="ville" placeholder="Marseille, France">
+                    </form>
+                    <button>Rechercher</button>
+                </div>
+                <div class="accomodation-filters">
+                    <h3>Filtres</h3>
+                    <button class="economic-btn">
+                        <i class="fa-solid fa-money-bill-wave" aria-hidden="true"></i>
+                        <span>Économique</span>
+                    </button>
+                    <button class="family-btn">
+                        <i class="fa-solid fa-person" aria-hidden="true"></i>
+                        <span>Familial</span>
+                    </button>
+                    <button class="romantic-btn">
+                        <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                        <span>Romantique</span>
+                    </button>
+                    <button class="favorites-btn">
+                        <i class="fa-solid fa-fire" aria-hidden="true"></i>
+                        <span>Nos pépites</span>
+                    </button>
+                </div>
+                <div class="accomodation-infobar">
+                    <i class="fa-solid fa-circle-info" aria-hidden="true"></i>
+                    <p>Plus de 500 logements sont disponibles dans cette ville</p>
+               </div>
+            </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <div id="hebergements-and-populaires">
                 <section class="hebergements">
 
