--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
                 </div>
                 <div class="accomodation-filters">
                     <h3>Filtres</h3>
-                    <button class="economic-btn">
+                    <button>
                         <i class="fa-solid fa-money-bill-wave" aria-hidden="true"></i>
                         <span>Économique</span>
                     </button>
-                    <button class="family-btn">
+                    <button>
                         <i class="fa-solid fa-person" aria-hidden="true"></i>
                         <span>Familial</span>
                     </button>
-                    <button class="romantic-btn">
+                    <button>
                         <i class="fa-solid fa-heart" aria-hidden="true"></i>
                         <span>Romantique</span>
                     </button>
-                    <button class="favorites-btn">
+                    <button>
                         <i class="fa-solid fa-fire" aria-hidden="true"></i>
                         <span>Nos pépites</span>
                     </button>
@@ -69,23 +69,6 @@
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                </div>
             </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <div id="hebergements-and-populaires">
                 <section class="hebergements">
 
