--- a/index.html
+++ b/index.html
@@ -246,8 +246,41 @@
                     </div>
                 </section>
             </div>
+            <section id="id-activites">
+                <div>
+                <h2 class="section-title">Activités à Marseille</h2>
+                </div>
+                    <div class="activites-cards">
+                        <a href="#">
+                            <article class="card">
+                                
+                                <img src="images/activites/reno-laithienne.jpg" alt="Photo du vieux-Port" title="Vieux-Port de Marseille">
+                                <h3 class=".card-title">Vieux-Port</h3>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="card">
+                                <img src="images/activites/paul-hermann.jpg" alt="Photo du fort de Pomègues" title="Fort de Pomègues">
+                                <h3 class=".card-title">Fort de Pomègues</h3>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="card">
+                                <img src="images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des Calanques" title="Parc national des Calanques">
+                                <h3 class=".card-title">Parc national des Calanques</h3>
+                            </article>
+                        </a>
+                        <a href="#">
+                            <article class="card">
+                                <img src="images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde" title="Notre-Dame-de-la-Garde">
+                                <h3 class=".card-title">Notre-Dame-de-la-Garde</h3>
+                            </article>
+                        </a>
+                    </div>
+            </section>
+            <footer></footer>
         </main>
-        <footer></footer>
+        
     </div>
 </body>
 </html>
