corrections search bar et validateurs w.c html et css

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div>
                 <a href="index.html">
                 <img src="/images/logo/Booki.png" alt="Logo booki" title="accueil">
+                </a>
             </div>
-            </a>
             <nav>
                 <a href="#id-hebergements-and-populaires">Hébergements</a>
                 <a href="#id-activites">Activités</a>
@@ -38,7 +38,7 @@
                     <div>
                         <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
                     </div>
-                    <form action="" method="post">
+                    <form method="post">
                         <label for="ville"></label>
                         <input type="search" id="ville" name="ville" placeholder="Marseille, France">
                     </form>
