--- a/index.html
+++ b/index.html
@@ -47,22 +47,24 @@
                 </div>
                 <div class="accomodation-filters">
                     <h3>Filtres</h3>
-                    <button>
-                        <i class="fa-solid fa-money-bill-wave" aria-hidden="true"></i>
-                        <span>Économique</span>
-                    </button>
-                    <button>
-                        <i class="fa-solid fa-person" aria-hidden="true"></i>
-                        <span>Familial</span>
-                    </button>
-                    <button>
-                        <i class="fa-solid fa-heart" aria-hidden="true"></i>
-                        <span>Romantique</span>
-                    </button>
-                    <button>
-                        <i class="fa-solid fa-fire" aria-hidden="true"></i>
-                        <span>Nos pépites</span>
-                    </button>
+                    <div class="filters-buttons">
+                        <button>
+                            <i class="fa-solid fa-money-bill-wave" aria-hidden="true"></i>
+                            <span>Économique</span>
+                        </button>
+                        <button>
+                            <i class="fa-solid fa-person" aria-hidden="true"></i>
+                            <span>Familial</span>
+                        </button>
+                        <button>
+                            <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                            <span>Romantique</span>
+                        </button>
+                        <button class="nos-pepites">
+                            <i class="fa-solid fa-fire" aria-hidden="true"></i>
+                            <span>Nos pépites</span>
+                        </button>
+                    </div>
                 </div>
                 <div class="accomodation-infobar">
                     <i class="fa-solid fa-circle-info" aria-hidden="true"></i>
