--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
                         <label for="ville"></label>
                         <input type="search" id="ville" name="ville" placeholder="Marseille, France">
                     </form>
-                    <button>Rechercher</button>
+                    <button class="search-btn-main">Rechercher</button>
+                    <button class="search-btn-mobile">
+                        <i class="fas fa-search"></i>
+                    </button>
                 </div>
                 <div class="accomodation-filters">
                     <h3>Filtres</h3>
@@ -250,7 +253,7 @@
                 </section>
             </div>
             <section id="id-activites">
-                <div>
+                <div class="activites-title">
                 <h2 class="section-title">Activités à Marseille</h2>
                 </div>
                     <div class="activites-cards">
