--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <header class="header-nav">
                 <div>
                     <a href="index.html">
-                    <img src="/images/logo/Booki.png" alt="Logo booki" title="accueil">
+                    <img src="images/logo/Booki.png" alt="Logo booki" title="accueil">
                     </a>
                 </div>
                 <nav>
@@ -43,27 +43,27 @@
                         <label for="ville"></label>
                         <input type="search" id="ville" name="ville" placeholder="Marseille, France">
                     </form>
-                    <button class="search-btn-main">Rechercher</button>
-                    <button class="search-btn-mobile">
+                    <button class="search-btn-main" type="button">Rechercher</button>
+                    <button class="search-btn-mobile" type="button">
                         <i class="fas fa-search"></i>
                     </button>
                 </div>
                 <div class="accomodation-filters">
                     <h3>Filtres</h3>
                     <div class="filters-buttons">
-                        <button>
+                        <button type="button">
                             <i class="fa-solid fa-money-bill-wave" aria-hidden="true"></i>
                             <span>Économique</span>
                         </button>
-                        <button>
+                        <button type="button">
                             <i class="fa-solid fa-person" aria-hidden="true"></i>
                             <span>Familial</span>
                         </button>
-                        <button>
+                        <button type="button">
                             <i class="fa-solid fa-heart" aria-hidden="true"></i>
                             <span>Romantique</span>
                         </button>
-                        <button class="nos-pepites">
+                        <button class="nos-pepites" type="button">
                             <i class="fa-solid fa-fire" aria-hidden="true"></i>
                             <span>Nos pépites</span>
                         </button>
